data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1289.wast
;; 10. **Test 10: Cross Block Misbranch Due to Type Mismatch**    - An `if` block checking for specific stack types before branching, but the branch incorrectly resolves due to type mismatch rules, causing an erroneous branch to external types or operators.  Use these descriptions to guide the implementation and testing for differential behavior regarding incorrect branch target resolution in WebAssembly and Wizard Engine implementations.

(assert_invalid
  (module (func $cross-block-misbranch-type-mismatch
    (if (result i32) (i32.const 1) 
      (then 
        (block
          (i32.const 42)
          (br 1 (i32.const 99))  ;; This should cause a type mismatch as it tries to break out to an incompatible block
        )
      )
    )
  ))
  "type mismatch"
)